Update to use fuse Sparky

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
+<!DOCTYPE <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
 </head>
-$css
 <body>
     <div id="app"></div>
-    $bundles
 </body>
+    $bundles
 </html>
